# Janscan

./: README.md  pyproject.toml
janscan/: __init__.py  __main__.py
janscan/config/: defaults.py  loader.py
janscan/console/: banner.py  commands.py  helpers.py  prompt.py
janscan/engine/: loader.py  runner.py  scorer.py
janscan/modules/: active_connections.py  audit_summary.py  base.py  disk_encryption.py  disk_usage.py  file_permissions.py  firewalls.py  ip_addresses.py  kernel.py  logging_audit.py  network.py  open_ports.py  security_hygiene.py  services.py  ssh_security.py  sudo_config.py  system_health.py  system_info.py  updates.py  user_accounts.py
janscan/reports/: html_report.py  json_report.py  pdf_report.py
janscan/reports/templates/: diff.html.j2  report.html.j2
janscan/storage/: db.py  queries.py  schema.sql
tests/: test_modules.py  test_scorer.py  test_storage.py
