[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "janscan"
version = "1.0.0"
description = "Linux security audit CLI tool"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "jinja2>=3.1",
    "reportlab>=4.0",
    "psutil>=5.9",
]

[project.scripts]
janscan = "janscan.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["janscan"]
